src/test/deca/syntax/invalid/objet/ReturnLonely.deca
// mismatched input ';' expecting {STRING, '{', '(', 'false', 'true', 'readInt', 'readFloat', 'new', 'this', 'null', '-', '!', FLOAT, INT, IDENT}
// Description : return seul
// Resultat : erreur en ligne 7: return a besoin d'un membre


{
    return ;
}